Working on node manager.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -178,7 +178,6 @@ services:
   esgf-node-manager:
    image: esgfhub/esgf-node-manager:${ESGF_VERSION}
    container_name: node-manager
-   entrypoint: /usr/local/bin/docker-entrypoint.sh
    volumes_from:
      - esgf-config
    environment:
@@ -189,6 +188,8 @@ services:
    networks:
      default: {}
      dbnetwork: {}
+   depends_on:
+     - esgf-postgres
 
   # FTP server
   esgf-ftp:
