--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -36,7 +36,7 @@ esg.search.solr.publish.url=http://esgf-solr:8984/solr
 # security
 security.authz.service.endpoint=https://my.esgf.node/esg-orp/saml/soap/secure/authorizationService.htm
 # node manager
-esgf.registration_xml.download_url=http://my.esgf.node/esgf-nm/registration.xml
+esgf.registration_xml.download_url=http://dist.ceda.ac.uk/esgf/dist/devel/lists/registration.xml
 esgf.registration_xml.path=/usr/local/esgf-dashboard-ip/bin/
 # dashboard
 dashboard.ip.app.home=/usr/local/esgf-dashboard-ip
