Commenting out the local 8982 shard.

--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -30,7 +30,7 @@ index.service.endpoint=http://my.esgf.node/esg-search/search
 esgf.index.peer=my.esgf.node
 publishing.service.app.home=/usr/local/tomcat/webapps/esg-search
 publishing.service.endpoint=https://my.esgf.node/esg-search/remote/secure/client-cert/hessian/publishingService
-esg.search.solr.local.url=http://esgf-solr:8982/solr
+#esg.search.solr.local.url=http://esgf-solr:8982/solr
 esg.search.solr.query.url=http://esgf-solr:8983/solr
 esg.search.solr.publish.url=http://esgf-solr:8984/solr
 # security
