--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -7,7 +7,7 @@ FROM esgfhub/esgf-node:1.1
 MAINTAINER Luca Cinquini <luca.cinquini@jpl.nasa.gov>
 
 # Tomcat 8
-ENV TOMCAT_VERSION 8.5.11
+ENV TOMCAT_VERSION 8.5.12
 
 RUN wget -O /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz http://mirror.reverse.net/pub/apache/tomcat/tomcat-8/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz && \
     cd /usr/local && tar xzf /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz && \
@@ -20,10 +20,13 @@ RUN cd /usr/local/tomcat/webapps && \
     rm -rf docs examples host-manager manager
 
 # copy custom configuration
-# server.xml: includes keystore, truststore
+# server.xml: includes references to keystore, truststore in /esg/config/tomcat
 # context.xml: increases the Tomcat cache to avoid flood of warning messages
-COPY conf/ /usr/local/tomcat/conf/
+# supervisor.tomcat.conf: supervisor configuration to run the Tomcat application
+COPY conf/server.xml /usr/local/tomcat/conf/server.xml
+COPY conf/context.xml /usr/local/tomcat/conf/context.xml
 COPY certs/ /esg/config/tomcat/
+COPY conf/supervisor.tomcat.conf /etc/supervisor/conf.d/supervisor.tomcat.conf
 
 # custom env variables for starting Tomcat
 COPY bin/setenv.sh $CATALINA_HOME/bin
@@ -41,4 +44,4 @@ EXPOSE 8080
 EXPOSE 8009
 EXPOSE 8443
 
-ENTRYPOINT ["/usr/local/tomcat/bin/catalina.sh", "run"]
+ENTRYPOINT ["supervisord", "--nodaemon", "-c", "/etc/supervisord.conf"]
