--- a/data-node/dashboard/conf/supervisord.dashboard.conf
+++ b/data-node/dashboard/conf/supervisord.dashboard.conf
@@ -1,7 +1,8 @@
 [program:dashboard]
 command=%(ENV_DASHBOARD_HOME)s/bin/ip.service start
-numprocs=1 
 process_name=%(program_name)s
-redirect_stderr: true
+startsecs=5
+user=dashboard
+numprocs=1 
 stdout_logfile=%(ENV_DASHBOARD_HOME)s/logs/esgf_dashboard.log
-autorestart: true
+redirect_stderr=true
