Cleaning up postgres image.

--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,6 +1,6 @@
 # ESGF node with postgres database
 
-FROM esgfhub/esgf-node:1.1
+FROM esgfhub/esgf-node:1.2
 
 MAINTAINER Luca Cinquini <luca.cinquini@jpl.nasa.gov>
 
@@ -8,17 +8,14 @@ MAINTAINER Luca Cinquini <luca.cinquini@jpl.nasa.gov>
 RUN yum -y update; yum clean all
 RUN yum -y install postgresql-server postgresql postgresql-contrib; yum clean all
 
-# postgres + ESGF scripts
+# copy postgres + ESGF scripts
 ADD ./scripts/ /usr/local/bin/
-RUN chmod +x /usr/local/bin/postgresql-setup.sh
-RUN chmod +x /usr/local/bin/postgres_esgf.sh
-RUN chmod +x /usr/local/bin/change_password.sh
 
-# ESGF sql schemas and data
+# copy ESGF sql schemas and data
 ADD ./sqldata/ /usr/local/bin/
 
 # setup postgres
-RUN /usr/local/bin/postgresql-setup.sh initdb
+RUN /usr/local/bin/postgres_setup.sh initdb
 
 # configuration
 ADD ./conf/postgresql.conf /var/lib/pgsql/data/postgresql.conf
@@ -26,7 +23,7 @@ RUN chown -v postgres.postgres /var/lib/pgsql/data/postgresql.conf
 RUN echo "host    all             all             0.0.0.0/0               md5" >> /var/lib/pgsql/data/pg_hba.conf
 
 # load ESGF schemas into postgres database
-RUN /usr/local/bin/postgres_esgf.sh
+RUN /usr/local/bin/postgres_setup_esgf.sh
 
 # IMPORTANT: change connections to require encrypted password
 RUN sed -i 's/ident/md5/g' /var/lib/pgsql/data/pg_hba.conf
